Fix add codex button z-index

--- a/src/components/header/index.styl
+++ b/src/components/header/index.styl
@@ -26,7 +26,7 @@
 		position absolute
 		right 5%
 		top 86px
-		z-index 10000
+		z-index 1
 
 	.logos
 		width 200px
